--- a/src/shared/components/Card/Card.module.scss
+++ b/src/shared/components/Card/Card.module.scss
@@ -5,9 +5,14 @@
 }
 
 .CardWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   background-image: url("../../../static/icons/tg_pattern_light.svg");
   width: inherit;
   height: inherit;
+
 }
 
 .Icon {
@@ -15,7 +20,7 @@
   height: 73px;
 }
 
-.IconSmall {
+.IconMedium {
   width: 117px;
   height: 117px;
 }
