--- a/src/static/css/variables.scss
+++ b/src/static/css/variables.scss
@@ -2,6 +2,7 @@
 
 $dark-theme: (
         --text-primary: $white,
+        --text-primary-button: $white,
         --label-secondary: $label_secondary,
         --tab-bar-label: $label_tab_bar,
         --link-color: $accent_blue,
@@ -18,6 +19,7 @@ $dark-theme: (
 
 $light-theme: (
         --text-primary: $black,
+        --text-primary-button: $white,
         --label-secondary: $label_secondary,
         --tab-bar-label: $label_tab_bar,
         --link-color: $accent_blue,
