--- a/src/pages/gifts/GiftsPage.module.scss
+++ b/src/pages/gifts/GiftsPage.module.scss
@@ -2,11 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 
   padding: 24px 0 12px 0;
-}
-
-.PageDescriptionIcon {
-  width: 48px;
-  height: 48px;
 }
