--- a/src/shared/components/Layout/Layout.module.scss
+++ b/src/shared/components/Layout/Layout.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  height: calc(100vh - 109px);
+  height: calc(var(--tg-viewport-height) - 75px);
   width: calc(100% - 32px);
   padding: 16px 16px 0 16px;
   overflow-y: auto;
