add registration and leaderboard

--- a/src/static/css/colors.scss
+++ b/src/static/css/colors.scss
@@ -1,6 +1,8 @@
 $white: #FFFFFF;
 $black: #000000;
 $primary: #007AFF;
+$bg_secondary_light: #EFEFF3;
+$bg_secondary_dark: rgba(0, 0, 0, 0.5);
 $accent_blue: #007AFF;
 $accent_cyan: #5AC8FA;
 $accent_gold: #F1AA05;
