--- a/src/pages/gifts/GiftsPage.module.scss
+++ b/src/pages/gifts/GiftsPage.module.scss
@@ -4,5 +4,10 @@
   align-items: center;
   text-align: center;
 
-  padding: 24px 0 12px 0;
+  padding: 8px 0 16px 0;
+}
+
+.Label {
+  padding-top: 8px;
+
 }
