--- a/src/static/css/variables.scss
+++ b/src/static/css/variables.scss
@@ -15,7 +15,8 @@ $dark-theme: (
         --tab-menu-separator: $tab_menu_separator,
 
         --border-color: rgba(255, 255, 255, 0.2),
-        --tg-theme-header-bg-color: rgba(230, 10, 10, 0.75)
+
+        --bg-card: #2C2C2E
 );
 
 $light-theme: (
@@ -33,6 +34,5 @@ $light-theme: (
         --tab-menu-separator: $tab_menu_separator,
         --border-color: rgba(60, 60, 67, 0.36),
 
-        --tg-theme-header-bg-color: rgba(230, 16, 16, 0.75)
-
+        --bg-card: $bg_secondary_light
 );
